updated planetsservice and planetspage frontend, backend

--- a/MauiPlanets/Views/PlanetsPage.xaml
+++ b/MauiPlanets/Views/PlanetsPage.xaml
@@ -3,10 +3,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiPlanets.Views.PlanetsPage"
              Title="PlanetsPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+
+    <Grid
+        IgnoreSafeArea="{OnPlatform Android=False, iOS=True}">
+        
+        <!--Menu Grid-->
+        <Grid
+            x:Name="MenuContainer"
+            IgnoreSafeArea="{OnPlatform Android=False, iOS=True}">
+
+            <Grid.Background>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color="#666666" Offset="0.0" />
+                    <GradientStop Color="#000000" Offset="1.0" />
+                </LinearGradientBrush>
+            </Grid.Background>
+
+            <Grid.GestureRecognizers>
+                <TapGestureRecognizer Tapped="GridArea_Tapped" />
+            </Grid.GestureRecognizers>
+            
+        </Grid>
+    </Grid>
 </ContentPage>
