--- a/MauiPlanets/Views/PlanetsPage.xaml
+++ b/MauiPlanets/Views/PlanetsPage.xaml
@@ -33,6 +33,36 @@
                     Style="{StaticResource PageHeaderStyle}"
                     HorizontalOptions="End"/>
 
+                <Label
+                    Text="Option 1 (with icon)"
+                    Style="{StaticResource PageHeaderSubtitleStyle}"
+                    HorizontalOptions="End"/>
+
+                <Label
+                    Text="Option 2 (with icon)"
+                    Style="{StaticResource PageHeaderSubtitleStyle}"
+                    HorizontalOptions="End"/>
+
+                <Label
+                    Text="Option 3 (with icon)"
+                    Style="{StaticResource PageHeaderSubtitleStyle}"
+                    HorizontalOptions="End"/>
+
+                <Label
+                    Text="Option 4 (with icon)"
+                    Style="{StaticResource PageHeaderSubtitleStyle}"
+                    HorizontalOptions="End"/>
+
+                <Label
+                    Text="Option 5 (with icon)"
+                    Style="{StaticResource PageHeaderSubtitleStyle}"
+                    HorizontalOptions="End"/>
+
+                <Label
+                    Text="Option 6 (with icon)"
+                    Style="{StaticResource PageHeaderSubtitleStyle}"
+                    HorizontalOptions="End"/>
+
             </VerticalStackLayout>
             
         </Grid>
