--- a/MauiPlanets/Views/PlanetsPage.xaml
+++ b/MauiPlanets/Views/PlanetsPage.xaml
@@ -64,7 +64,122 @@
                     HorizontalOptions="End"/>
 
             </VerticalStackLayout>
+        </Grid>
+        
+        <!--Main Content-->
+        <Grid
+            x:Name="MainContentGrid"
+            Padding="24,52,24,0"
+            IgnoreSafeArea="{OnPlatform Android=False, iOS=True}"
+            BackgroundColor="{StaticResource PageBackgroundColor}"
+            ColumnDefinitions="*, Auto"
+            RowDefinitions="Auto,*">
+            
+            <!--Header Text-->
+            <VerticalStackLayout
+                Spacing="4"
+                Grid.Row="0"
+                Grid.Column="0"
+                VerticalOptions="Center">
+
+                <Label 
+                    Style="{StaticResource PageHeaderStyle}"
+                    Text="Let's Explore"/>
+
+                <Label 
+                    Style="{StaticResource PageHeaderSubtitleStyle}"
+                    Text="The milky way galaxy" />
+
+            </VerticalStackLayout>
+            
+            <!--Profile pic-->
+            <Border
+                WidthRequest="56"
+                HeightRequest="56"
+                VerticalOptions="Center"
+                HorizontalOptions="End"
+                Stroke="{StaticResource LightBorderColor}"
+                StrokeThickness="6"
+                Grid.Row="0"
+                Grid.Column="1">
+
+                <Border.StrokeShape>
+                    <RoundRectangle CornerRadius="28" />
+                </Border.StrokeShape>
+
+                <Border.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="ProfilePic_Clicked" />
+                </Border.GestureRecognizers>
+
+                <Image
+                    VerticalOptions="Center"
+                    HorizontalOptions="Center"
+                    WidthRequest="50"
+                    HeightRequest="50"
+                    Source="profilepic.jpeg">
+                    <Image.Clip>
+                        <EllipseGeometry 
+                            Center="25,25"
+                            RadiusX="25"
+                            RadiusY="25" />
+                    </Image.Clip>
+                    
+                </Image>
+                
+            </Border>
+            
+            <!--Main Content ScrollView-->
+            <ScrollView
+                Grid.Row="1"
+                Grid.Column="0"
+                Grid.ColumnSpan="2"
+                HorizontalScrollBarVisibility="Never"
+                VerticalScrollBarVisibility="Never"
+                Margin="0,32,-24,0">
+
+                <VerticalStackLayout
+                    Spacing="12">
+                    
+                    <!--Search Box-->
+                    <Border
+                        Padding="12,4"
+                        BackgroundColor="#33CCCC"
+                        Stroke="{StaticResource BorderColor}"
+                        Margin="0,0,24,0"
+                        HeightRequest="48">
+                        <Border.StrokeShape>
+                            <RoundRectangle CornerRadius="6" />
+                        </Border.StrokeShape>
+
+                        <Grid
+                            HorizontalOptions="Fill"
+                            VerticalOptions="Center"
+                            ColumnDefinitions="Auto,*"
+                            ColumnSpacing="16">
+
+                            <Image 
+                                WidthRequest="18"
+                                HeightRequest="18"
+                                Source="imgsearch.png"
+                                Grid.Column="0"
+                                VerticalOptions="Center" />
+
+                            <Label 
+                                Text="Search for your favorite planet"
+                                Grid.Column="1"
+                                VerticalOptions="Center"
+                                VerticalTextAlignment="Center"
+                                Style="{StaticResource MenuLabelStyle}"/>
+
+                        </Grid>
+                        
+                    </Border>
+                    
+                </VerticalStackLayout>
+                
+            </ScrollView>
             
         </Grid>
+        
     </Grid>
 </ContentPage>
