--- a/MauiPlanets/Views/PlanetsPage.xaml
+++ b/MauiPlanets/Views/PlanetsPage.xaml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:models="clr-namespace:MauiPlanets.Models"
              x:Class="MauiPlanets.Views.PlanetsPage"
              Title="PlanetsPage">
 
@@ -174,6 +175,73 @@
                         </Grid>
                         
                     </Border>
+
+                    <Label
+                        Style="{StaticResource PageSubHeaderStyle}"
+                        Margin="0,12,0,0">
+                        <Label.FormattedText>
+                            <FormattedString>
+                                <Span Text="Most Popular   "/>
+                            </FormattedString>
+                        </Label.FormattedText>
+                    </Label>
+
+                    <CollectionView
+                        x:Name="lstPopularPlanets"
+                        HeightRequest="280"
+                        SelectionMode="Single"
+                        SelectionChanged="Planets_SelectionChanged">
+
+                        <CollectionView.ItemsLayout>
+                            <LinearItemsLayout 
+                                Orientation="Horizontal"
+                                ItemSpacing="16"/>
+                        </CollectionView.ItemsLayout>
+
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate
+                                x:DataType="models:Planet">
+                                <Border
+                                    VerticalOptions="Fill"
+                                    WidthRequest="220"
+                                    StrokeThickness="0"
+                                    Background="{Binding Background}"
+                                    Padding="20">
+
+                                    <Border.StrokeShape>
+                                        <RoundRectangle CornerRadius="24" />
+                                    </Border.StrokeShape>
+
+                                    <Grid
+                                        RowDefinitions="*,Auto,Auto"
+                                        RowSpacing="4">
+
+                                        <Image
+                                            Grid.Row="0"
+                                            Source="{Binding HeroImage}"
+                                            Rotation="-30"
+                                            Aspect="AspectFill"
+                                            VerticalOptions="Fill"
+                                            HorizontalOptions="Fill" />
+
+                                        <Label
+                                            Grid.Row="1"
+                                            Style="{StaticResource FeaturedPlanetHeaderStyle}"
+                                            Text="{Binding Name}"
+                                            Margin="0,8,0,0"/>
+
+                                        <Label 
+                                            Grid.Row="2"
+                                            Style="{StaticResource FeaturedPlanetHeaderSubtitleStyle}"
+                                            Text="{Binding Subtitle}"/>
+                                    </Grid>
+                                </Border>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                        
+                    </CollectionView>
+                    
+                    
                     
                 </VerticalStackLayout>
                 
