Added profilepic thing to planetpage

--- a/MauiPlanets/Views/PlanetsPage.xaml
+++ b/MauiPlanets/Views/PlanetsPage.xaml
@@ -241,7 +241,7 @@
                         
                     </CollectionView>
                     
-                    
+                    <!--More Collection-->
                     
                 </VerticalStackLayout>
                 
