--- a/MauiPlanets/Views/PlanetsDetailsPage.xaml
+++ b/MauiPlanets/Views/PlanetsDetailsPage.xaml
@@ -34,7 +34,7 @@
             Grid.Column="1"
             HorizontalOptions="End"
             VerticalOptions="Center" />
-        
+
         <!--Main content scrollview-->
         <ScrollView
             Grid.Row="1"
@@ -43,9 +43,81 @@
             HorizontalScrollBarVisibility="Never"
             VerticalScrollBarVisibility="Never"
             Margin="0,16,0,0">
-            
-        </ScrollView>
 
+            <VerticalStackLayout
+                Spacing="18">
+
+                <!--Planet Image-->
+                <Image
+                    Source="{Binding HeroImage}"
+                    Aspect="AspectFit"
+                    HorizontalOptions="Fill"
+                    HeightRequest="240"
+                    Margin="24, 0" />
+
+                <!--Planet name-->
+                <Label 
+                    Margin="0,-24,0,0"
+                    Style="{StaticResource AllPlanetHeaderSubtitleStyle}"
+                    Text="{Binding Name}"/>
+
+                <!--Planet subtitle-->
+                <Label 
+                    Margin="0,-12,0,0"
+                    Style="{StaticResource PlanetHeaderSubtitleStyle}"
+                    Text="{Binding Subtitle}"/>
+
+                <!--Divider-->
+                <Rectangle 
+                    HorizontalOptions="Fill"
+                    HeightRequest="2"
+                    Stroke="Transparent"
+                    Fill="{StaticResource LightBorderColor}"/>
+
+                <!--Planet info-->
+                <Label 
+                    LineBreakMode="WordWrap"
+                    Style="{StaticResource PlanetDetailsTextStyle}"
+                    Text="{Binding Description}"/>
+
+                <!--Divider-->
+                <Rectangle 
+                    HorizontalOptions="Fill"
+                    HeightRequest="2"
+                    Stroke="Transparent"
+                    Fill="{StaticResource LightBorderColor}"/>
+
+                <!--Planet images-->
+                <Label 
+                    Style="{StaticResource PlanetHeaderSubtitleStyle}"
+                    Text="Gallery"/>
+
+                <CollectionView
+                    Margin="0,-6,0,0"
+                    HeightRequest="400"
+                    WidthRequest="400"
+                    ItemsSource="{Binding Images}">
+
+                    <CollectionView.ItemsLayout>
+                        <LinearItemsLayout
+                            Orientation="Vertical"
+                            ItemSpacing="16">
+                        </LinearItemsLayout>
+                    </CollectionView.ItemsLayout>
+
+                    <CollectionView.ItemTemplate>
+                        <DataTemplate>
+                            <Image
+                                Source="{Binding .}"
+                                Aspect="AspectFill"
+                                HorizontalOptions="Center"
+                                VerticalOptions="Center">
+
+                            </Image>
+                        </DataTemplate>
+                    </CollectionView.ItemTemplate>
+                </CollectionView>
+            </VerticalStackLayout>
+        </ScrollView>
     </Grid>
-    
 </ContentPage>
