--- a/MauiCRUD/MainPage.xaml
+++ b/MauiCRUD/MainPage.xaml
@@ -21,7 +21,7 @@
                                HorizontalOptions="Center" />
             <Label Text="{Binding BusyText}"
                    VerticalOptions="Center"
-                   HorizontalOptions="Center" />
+                   HorizontalOptions="Center"/>
         </VerticalStackLayout>
 
         <Label Grid.Row="0"
@@ -36,7 +36,7 @@
                             ItemsSource="{Binding Products}">
                 <CollectionView.ItemsLayout>
                     <LinearItemsLayout ItemSpacing="10"
-                                       Orientation="Vertical" />
+                                       Orientation="Vertical"/>
                 </CollectionView.ItemsLayout>
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="models:Product">
@@ -53,7 +53,7 @@
                                    Grid.Column="0"
                                    Text="{Binding Price, StringFormat='Price: {0}'}"
                                    FontSize="12"
-                                   FontAttributes="Bold"/>
+                                   FontAttributes="Bold" />
 
                             <Button Grid.Row="0"
                                     Grid.Column="1"
@@ -65,12 +65,79 @@
                                     Command="{Binding Source={RelativeSource AncestorType={x:Type vm:ProductsViewModel}}, Path=SetOperatingProductCommand}"
                                     CommandParameter="{Binding .}"/>
 
+                            <Button Grid.Row="1"
+                                    Grid.Column="1"
+                                    Text="Del"
+                                    Padding="0"
+                                    HeightRequest="25"
+                                    FontSize="12"
+                                    CornerRadius="2"
+                                    Command="{Binding Source={RelativeSource AncestorType={x:Type vm:ProductsViewModel}}, Path=DeleteProductCommand}"
+                                    CommandParameter="{Binding Id}"/>
                         </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
+                <CollectionView.EmptyView>
+                    <ContentView>
+                        <VerticalStackLayout HorizontalOptions="Center"
+                                             VerticalOptions="Center">
+                            <Label Text="No Products Found"
+                                   FontSize="18"
+                                   FontAttributes="Bold"
+                                   HorizontalTextAlignment="Center"/>
+                            <Label Text="Try creating a product from the form below"/>
+                        </VerticalStackLayout>
+                    </ContentView>
+                </CollectionView.EmptyView>
             </CollectionView>
+
+            <VerticalStackLayout Grid.Row="1">
+                <BoxView Color="{DynamicResource Primary}"
+                         HeightRequest="1" />
+                <Grid RowDefinitions="Auto, Auto"
+                      ColumnDefinitions="*, Auto"
+                      Padding="10"
+                      RowSpacing="10"
+                      ColumnSpacing="10"
+                      BackgroundColor="#CCBFFA">
+                    <VerticalStackLayout Grid.Row="0"
+                                         Grid.Column="0">
+                        <Label Text="Name"/>
+                        <Entry Text="{Binding OperatingProduct.Name}"
+                               Placeholder="Product name"
+                               Margin="0"
+                               BackgroundColor="#DAD1F9" />
+                    </VerticalStackLayout>
+
+                    <VerticalStackLayout Grid.Row="0"
+                                         Grid.Column="1">
+                        <Label Text="Price"/>
+                        <Entry Text="{Binding OperatingProduct.Price}"
+                               Placeholder="Product price"
+                               Margin="0"
+                               BackgroundColor="#DAD1F9" 
+                               Keyboard="Numeric" />
+                    </VerticalStackLayout>
+
+                    <Button Grid.Row="1"
+                            Grid.ColumnSpan="2"
+                            Text="Update Product"
+                            HorizontalOptions="Center"
+                            VerticalOptions="End"
+                            CornerRadius="4"
+                            Padding="50, 0"
+                            Command="{Binding SaveProductCommand}">
+                        <Button.Triggers>
+                            <DataTrigger TargetType="Button"
+                                         Binding="{Binding OperatingProduct.Id}"
+                                         Value="0">
+                                <Setter Property="Text" Value="Create Product" />
+                            </DataTrigger>
+                        </Button.Triggers>
+                    </Button>
+                </Grid>
+            </VerticalStackLayout>
         </Grid>
-        
     </Grid>
-    
+
 </ContentPage>
