added iphone height and color fixes

--- a/FruitVegBasketMaui/Pages/HomePage.xaml
+++ b/FruitVegBasketMaui/Pages/HomePage.xaml
@@ -74,7 +74,8 @@
             
         <controls:Spacer Space="20"/>
 
-        <CollectionView ItemsSource="{Binding Offers}">
+        <CollectionView ItemsSource="{Binding Offers}"
+                        HeightRequest="180">
             <CollectionView.ItemsLayout>
                 <LinearItemsLayout Orientation="Horizontal"
                                    ItemSpacing="15"/>
@@ -119,7 +120,8 @@
 
         <controls:Spacer Space="5"/>
 
-        <CollectionView ItemsSource="{Binding Categories}">
+        <CollectionView ItemsSource="{Binding Categories}"
+                        HeightRequest="175">
                 <CollectionView.ItemsLayout>
                     <LinearItemsLayout Orientation="Horizontal"
                                    ItemSpacing="12"/>
