--- a/FruitVegBasketMaui/AppShell.xaml
+++ b/FruitVegBasketMaui/AppShell.xaml
@@ -9,6 +9,7 @@
     xmlns:pages="clr-namespace:Pages"
     Shell.TabBarBackgroundColor="{StaticResource Mid}"
     Shell.TabBarTitleColor="{StaticResource White}"
+    Shell.TabBarForegroundColor="{StaticResource White}"
     Shell.BackgroundColor="{StaticResource Mid}">
 
     <Shell.Behaviors>
