Added appconstants, color converter, httpmessage interface and http message handler for ios, android. Added offersservice, added localhost links to offers and categories

--- a/FruitVegBasketMaui/FruitVegBasketMaui/Pages/HomePage.xaml
+++ b/FruitVegBasketMaui/FruitVegBasketMaui/Pages/HomePage.xaml
@@ -7,10 +7,13 @@
              xmlns:vm="clr-namespace:FruitVegBasket.ViewModels"
              xmlns:models="clr-namespace:Models"
              xmlns:controls="clr-namespace:Controls"
+             xmlns:converters="clr-namespace:Converter"
              x:DataType="vm:HomePageViewModel">
 
         <ContentPage.Resources>
             <ResourceDictionary>
+                <converters:StringToColorConverter x:Key="StringToColor"/>
+
                 <Style TargetType="Label" x:Key="H1">
                     <Setter Property="FontSize" Value="24"/>
                     <Setter Property="FontAttributes" Value="Bold"/>
@@ -88,7 +91,7 @@
                             HeightRequest="180"
                             WidthRequest="300">
                         <Grid >
-                            <BoxView Color="{Binding BgColor}"
+                            <BoxView Color="{Binding BgColor, Converter={StaticResource StringToColor}}"
                                      Opacity="0.5"/>
                             <Grid RowDefinitions="Auto, *, Auto"
                                   Padding="15">
