added productdto, products service and loading, page now shows fetching data,

--- a/FruitVegBasketMaui/FruitVegBasketMaui/Pages/HomePage.xaml
+++ b/FruitVegBasketMaui/FruitVegBasketMaui/Pages/HomePage.xaml
@@ -10,120 +10,121 @@
              xmlns:converters="clr-namespace:Converter"
              x:DataType="vm:HomePageViewModel">
 
-        <ContentPage.Resources>
-            <ResourceDictionary>
-                <converters:StringToColorConverter x:Key="StringToColor"/>
+    <ContentPage.Resources>
+        <ResourceDictionary>
 
-                <Style TargetType="Label" x:Key="H1">
-                    <Setter Property="FontSize" Value="24"/>
-                    <Setter Property="FontAttributes" Value="Bold"/>
-                    <Setter Property="Margin" Value="0, 10"/>
-                </Style>
+            <converters:StringToColorConverter x:Key="StringToColor"/>
 
-                <Style TargetType="Label" x:Key="H2">
-                    <Setter Property="FontSize" Value="22"/>
-                    <Setter Property="FontAttributes" Value="Bold"/>
-                    <Setter Property="Margin" Value="0, 8"/>
-                </Style>
+            <Style TargetType="Label" x:Key="H1">
+                <Setter Property="FontSize" Value="24"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="Margin" Value="0, 10"/>
+            </Style>
 
-                <Style TargetType="Label" x:Key="H3">
-                    <Setter Property="FontSize" Value="20"/>
-                    <Setter Property="FontAttributes" Value="Bold"/>
-                    <Setter Property="Margin" Value="0, 6"/>
-                </Style>
-                <Style TargetType="Label" x:Key="H4">
-                    <Setter Property="FontSize" Value="18"/>
-                    <Setter Property="FontAttributes" Value="Bold"/>
-                    <Setter Property="Margin" Value="0, 4"/>
-                </Style>
-                <Style TargetType="Label" x:Key="H5">
-                    <Setter Property="FontSize" Value="16"/>
-                    <Setter Property="FontAttributes" Value="Bold"/>
-                    <Setter Property="Margin" Value="0, 2"/>
-                </Style>
-                <Style TargetType="Label" x:Key="H6">
-                    <Setter Property="FontSize" Value="14"/>
-                    <Setter Property="FontAttributes" Value="Bold"/>
-                    <Setter Property="Margin" Value="0, 1"/>
-                </Style>
-            </ResourceDictionary>
+            <Style TargetType="Label" x:Key="H2">
+                <Setter Property="FontSize" Value="22"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="Margin" Value="0, 8"/>
+            </Style>
 
-        </ContentPage.Resources>
+            <Style TargetType="Label" x:Key="H3">
+                <Setter Property="FontSize" Value="20"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="Margin" Value="0, 6"/>
+            </Style>
+            <Style TargetType="Label" x:Key="H4">
+                <Setter Property="FontSize" Value="18"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="Margin" Value="0, 4"/>
+            </Style>
+            <Style TargetType="Label" x:Key="H5">
+                <Setter Property="FontSize" Value="16"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="Margin" Value="0, 2"/>
+            </Style>
+            <Style TargetType="Label" x:Key="H6">
+                <Setter Property="FontSize" Value="14"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="Margin" Value="0, 1"/>
+            </Style>
+        </ResourceDictionary>
 
+    </ContentPage.Resources>
+
+    <Grid>
         <VerticalStackLayout Padding="10, 15">
-        <Label>
-            <Label.FormattedText>
-                <FormattedString>
-                    <Span Text="Hi, &#10;"
+            <Label>
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span Text="Hi, &#10;"
                           TextColor="{StaticResource Primary}"                          
                           FontSize="14"
                           FontAttributes="Bold"/>
-                    <Span Text="Tormi"
+                        <Span Text="Tormi"
                           TextColor="{StaticResource Mid}"
                           FontSize="18"
                           FontAttributes="Bold"
                           />
-                </FormattedString>
-            </Label.FormattedText>
-        </Label>
+                    </FormattedString>
+                </Label.FormattedText>
+            </Label>
 
-        <controls:Spacer Space="15"/>
+            <controls:Spacer Space="15"/>
 
-        <Label Text="Let's order some fresh fruits and vegetables for you"
+            <Label Text="Let's order some fresh fruits and vegetables for you"
                Style="{StaticResource H2}"
                LineHeight="1.3"
                Opacity="0.8"
                />
-            
-        <controls:Spacer Space="20"/>
+            <controls:Spacer Space="20"/>
 
-        <CollectionView ItemsSource="{Binding Offers}"
+            <CollectionView ItemsSource="{Binding Offers}"
                         HeightRequest="180">
-            <CollectionView.ItemsLayout>
-                <LinearItemsLayout Orientation="Horizontal"
+                <CollectionView.ItemsLayout>
+                    <LinearItemsLayout Orientation="Horizontal"
                                    ItemSpacing="15"/>
-            </CollectionView.ItemsLayout>
-            <CollectionView.ItemTemplate>
-                <DataTemplate x:DataType="models:Offer">
-                    <Border StrokeShape="RoundRectangle 20"
+                </CollectionView.ItemsLayout>
+                <CollectionView.ItemTemplate>
+                    <DataTemplate x:DataType="models:Offer">
+                        <Border StrokeShape="RoundRectangle 20"
                             StrokeThickness="0"
                             Background="Transparent"
                             HeightRequest="180"
                             WidthRequest="300">
-                        <Grid >
-                            <BoxView Color="{Binding BgColor, Converter={StaticResource StringToColor}}"
+                            <Grid >
+                                <BoxView Color="{Binding BgColor, Converter={StaticResource StringToColor}}"
                                      Opacity="0.5"/>
-                            <Grid RowDefinitions="Auto, *, Auto"
+                                <Grid RowDefinitions="Auto, *, Auto"
                                   Padding="15">
-                                <Label Grid.Row="0"
+                                    <Label Grid.Row="0"
                                        Text="{Binding Title, StringFormat='{0} !!!'}"
                                        Style="{StaticResource H3}"/>
-                                <Label Grid.Row="1"
+                                    <Label Grid.Row="1"
                                        Text="{Binding Description}"
                                        FontSize="16"
                                        VerticalOptions="Center"/>
-                                <Label Grid.Row="2"
+                                    <Label Grid.Row="2"
                                        Text="{Binding Code}"
                                        Style="{StaticResource H4}"
                                        HorizontalOptions="Center"
                                        BackgroundColor="{StaticResource Primary}"
                                        TextColor="White"
                                        Padding="10, 5"/>
+                                </Grid>
                             </Grid>
-                        </Grid>
-                    </Border>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
+                        </Border>
+                    </DataTemplate>
+                </CollectionView.ItemTemplate>
+            </CollectionView>
 
-        <controls:Spacer Space="20"/>
+            <controls:Spacer Space="20"/>
 
-        <Label Text="Shop by category"
+            <Label Text="Shop by category"
                Style="{StaticResource H2}"/>
 
-        <controls:Spacer Space="5"/>
+            <controls:Spacer Space="5"/>
 
-        <CollectionView ItemsSource="{Binding Categories}"
+            <CollectionView ItemsSource="{Binding Categories}"
                         HeightRequest="175">
                 <CollectionView.ItemsLayout>
                     <LinearItemsLayout Orientation="Horizontal"
@@ -134,19 +135,19 @@
                         <Border StrokeShape="RoundRectangle 5"
                             StrokeThickness="0">
                             <Grid>
-                                <Image
-                                    Aspect="AspectFill"
-                                    VerticalOptions="Center"
-                                    HorizontalOptions="Center"
-                                    HeightRequest="175"
-                                    WidthRequest="150"
-                                    Opacity="0.9">
+                                <Image 
+                                   Aspect="AspectFill"
+                                   VerticalOptions="Center"
+                                   HorizontalOptions="Center"
+                                   HeightRequest="175"
+                                   WidthRequest="150"
+                                   Opacity="0.9">
                                     <Image.Source>
                                         <UriImageSource Uri="{Binding Image}"
-                                                         CachingEnabled="True"/>
+                                                    CachingEnabled="True"/>
                                     </Image.Source>
                                 </Image>
-                            <Border StrokeShape="RoundRectangle 8"
+                                <Border StrokeShape="RoundRectangle 8"
                                     StrokeThickness="0"
                                     BackgroundColor="White"
                                     VerticalOptions="End"
@@ -164,10 +165,23 @@
                 </CollectionView.ItemTemplate>
             </CollectionView>
 
-        <controls:Spacer Space="15"/>
+            <controls:Spacer Space="15"/>
 
-        <Label Text="Popular"
+            <Label Text="Popular"
                 Style="{StaticResource H2}"/>
 
         </VerticalStackLayout>
+        <Grid IsVisible="{Binding IsBusy}">
+            <BoxView Color="{StaticResource Mid}"/>
+            <VerticalStackLayout HorizontalOptions="Center"
+                                 VerticalOptions="Center">
+                <ActivityIndicator IsRunning="True"
+                                   Color="White"
+                                   HorizontalOptions="Center"/>
+                <Label Text="Fetching data..."
+                       TextColor="White"
+                       HorizontalOptions="Center"/>
+            </VerticalStackLayout>
+        </Grid>
+    </Grid>
 </ContentPage>
