--- a/FruitVegBasketMaui/FruitVegBasketMaui/Pages/HomePage.xaml
+++ b/FruitVegBasketMaui/FruitVegBasketMaui/Pages/HomePage.xaml
@@ -51,7 +51,8 @@
         </ResourceDictionary>
 
     </ContentPage.Resources>
-
+    
+    <Grid>
     <ScrollView>
         <Grid>
             <VerticalStackLayout Padding="10, 15">
@@ -190,4 +191,7 @@
             </Grid>
         </Grid>
     </ScrollView>
+
+    <controls:CartControl Count="{Binding CartCount}"/>
+    </Grid>
 </ContentPage>
