--- a/FruitVegBasketMaui/FruitVegBasketMaui/Pages/CategoriesPage.xaml
+++ b/FruitVegBasketMaui/FruitVegBasketMaui/Pages/CategoriesPage.xaml
@@ -1,12 +1,36 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:pages="clr-namespace:Pages"
+             xmlns:models="clr-namespace:Models"
              x:Class="Pages.CategoriesPage"
-             Title="CategoriesPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             Title="All Categories"
+             x:DataType="pages:CategoriesPage">
+    <ScrollView>
+        <CollectionView ItemsSource="{Binding Categories}"
+                        ItemsLayout="VerticalGrid, 3"
+                        SelectionMode="Single"
+                        SelectionChanged="CollectionView_SelectionChanged">
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="models:Category">
+                    <Border BackgroundColor="{StaticResource Primary}"
+                            StrokeShape="RoundRectangle 5"
+                            Margin="5">
+                        <Grid RowDefinitions="*, 40">
+                            <Image Grid.Row="0"
+                                   Source="{Binding Image}"
+                                   Aspect="AspectFill" />
+                            <Label Grid.Row="1"
+                                   Text="{Binding Name}"
+                                   VerticalOptions="Center"
+                                   HorizontalOptions="Center"
+                                   LineBreakMode="WordWrap"
+                                   HorizontalTextAlignment="Center"
+                                   TextColor="White"/>
+                        </Grid>
+                    </Border>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+    </ScrollView>
 </ContentPage>
