--- a/FruitVegBasketMaui/FruitVegBasketMaui/Pages/CategoryProductsPage.xaml
+++ b/FruitVegBasketMaui/FruitVegBasketMaui/Pages/CategoryProductsPage.xaml
@@ -1,12 +1,52 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:vm="clr-namespace:FruitVegBasket.ViewModels"
+             xmlns:models="clr-namespace:Models"
+             xmlns:controls="clr-namespace:Controls"
+             xmlns:dto="clr-namespace:FruitVegBasketMaui.Shared.Dtos;assembly=FruitVegBasketMaui.Shared"
              x:Class="Pages.CategoryProductsPage"
-             Title="CategoryProductsPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+             x:DataType="vm:CategoryProductsViewModel"
+             Title="{Binding PageTitle}">
+
+
+    <Grid ColumnDefinitions="80, *">
+        <CollectionView Grid.Column="0"
+                        ItemsSource="{Binding Categories}"
+                        BackgroundColor="{StaticResource Primary}">
+            <CollectionView.ItemsLayout>
+                <LinearItemsLayout Orientation="Vertical"
+                                   ItemSpacing="15" />
+            </CollectionView.ItemsLayout>
+            <CollectionView.ItemTemplate>
+                <DataTemplate x:DataType="models:Category">
+                    <VerticalStackLayout HorizontalOptions="Center"
+                                         VerticalOptions="Center"
+                                         WidthRequest="80"
+                                         Padding="0, 10, 0, 0">
+                        <Border StrokeShape="RoundRectangle 35"
+                                StrokeThickness="0"
+                                HeightRequest="70"
+                                WidthRequest="70"
+                                HorizontalOptions="Center">
+                            <Image Source="{Binding Image}"
+                                   Aspect="AspectFill"
+                                   HeightRequest="70"
+                                   WidthRequest="70" />
+                        </Border>
+                        <Label Text="{Binding Name}"
+                               TextColor="White"
+                               FontSize="12"
+                               LineBreakMode="WordWrap"
+                               FontAttributes="Bold"
+                               HorizontalTextAlignment="Center" />
+                    </VerticalStackLayout>
+                </DataTemplate>
+            </CollectionView.ItemTemplate>
+        </CollectionView>
+        <ScrollView Grid.Column="1">
+            <Label Text="Products"/>
+        </ScrollView>
+    </Grid>
+
 </ContentPage>
